@@ -25,21 +25,25 @@ import org.keycloak.admin.client.resource.GroupResource;
 import org.keycloak.admin.client.resource.GroupsResource;
 import org.keycloak.admin.client.resource.RealmResource;
 import org.keycloak.admin.client.resource.RoleMappingResource;
+import org.keycloak.admin.client.resource.UserProfileResource;
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.admin.client.resource.UsersResource;
 import org.keycloak.events.admin.OperationType;
 import org.keycloak.events.admin.ResourceType;
 import org.keycloak.models.Constants;
+import org.keycloak.models.utils.KeycloakModelUtils;
 import org.keycloak.representations.AccessToken;
 import org.keycloak.representations.idm.ClientRepresentation;
 import org.keycloak.representations.idm.CredentialRepresentation;
+import org.keycloak.representations.idm.ErrorRepresentation;
 import org.keycloak.representations.idm.GroupRepresentation;
 import org.keycloak.representations.idm.MappingsRepresentation;
 import org.keycloak.representations.idm.RealmRepresentation;
 import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.representations.userprofile.config.UPConfig;
 import org.keycloak.testsuite.admin.ApiUtil;
-import org.keycloak.testsuite.arquillian.annotation.AuthServerContainerExclude;
+import org.keycloak.testsuite.forms.VerifyProfileTest;
 import org.keycloak.testsuite.updaters.Creator;
 import org.keycloak.testsuite.util.AdminEventPaths;
 import org.keycloak.testsuite.util.ClientBuilder;
@@ -49,8 +53,8 @@ import org.keycloak.testsuite.util.UserBuilder;
 import org.keycloak.testsuite.utils.tls.TLSUtils;
 import org.keycloak.util.JsonSerialization;
 
-import javax.ws.rs.NotFoundException;
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.NotFoundException;
+import jakarta.ws.rs.core.Response;
 import java.io.IOException;
 import java.net.URI;
 import java.util.ArrayList;
@@ -64,8 +68,8 @@ import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import javax.ws.rs.ClientErrorException;
-import javax.ws.rs.core.Response.Status;
+import jakarta.ws.rs.ClientErrorException;
+import jakarta.ws.rs.core.Response.Status;
 import static org.hamcrest.Matchers.*;
 
 import org.junit.Rule;
@@ -79,11 +83,12 @@ import static org.junit.Assert.assertTrue;
 
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.models.AdminRoles;
+import org.keycloak.models.GroupModel;
 import org.keycloak.models.ModelDuplicateException;
 import org.keycloak.models.RealmModel;
-import org.keycloak.models.utils.KeycloakModelUtils;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import org.keycloak.models.GroupProvider;
 import static org.keycloak.testsuite.Assert.assertNames;
 import static org.keycloak.testsuite.util.ServerURLs.getAuthServerContextRoot;
 
@@ -167,6 +172,7 @@ public class GroupTest extends AbstractGroupTest {
     }
 
     @Test
+    // KEYCLOAK-16888 Error messages for groups with same name in the same level
     public void doNotAllowSameGroupNameAtSameLevel() throws Exception {
         RealmResource realm = adminClient.realms().realm("test");
 
@@ -177,19 +183,31 @@ public class GroupTest extends AbstractGroupTest {
         GroupRepresentation anotherTopGroup = new GroupRepresentation();
         anotherTopGroup.setName("top");
         Response response = realm.groups().add(anotherTopGroup);
-        assertEquals(409, response.getStatus()); // conflict status 409 - same name not allowed
+        assertSameNameNotAllowed(response,"Top level group named 'top' already exists.");
+        response.close();
+
+        // allow moving the group to top level (nothing is done)
+        response = realm.groups().add(topGroup);
+        assertEquals(Response.Status.NO_CONTENT, response.getStatusInfo());
+        response.close();
 
         GroupRepresentation level2Group = new GroupRepresentation();
         level2Group.setName("level2");
         response = realm.groups().group(topGroup.getId()).subGroup(level2Group);
-        response.close();
         assertEquals(201, response.getStatus()); // created status
+        level2Group.setId(ApiUtil.getCreatedId(response));
+        response.close();
 
         GroupRepresentation anotherlevel2Group = new GroupRepresentation();
         anotherlevel2Group.setName("level2");
         response = realm.groups().group(topGroup.getId()).subGroup(anotherlevel2Group);
+        assertSameNameNotAllowed(response,"Sibling group named 'level2' already exists.");
         response.close();
-        assertEquals(409, response.getStatus()); // conflict status 409 - same name not allowed
+
+        // allow moving the group to the same parent (nothing is done)
+        response = realm.groups().group(topGroup.getId()).subGroup(level2Group);
+        assertEquals(Response.Status.NO_CONTENT, response.getStatusInfo());
+        response.close();
     }
 
     @Test
@@ -212,7 +230,7 @@ public class GroupTest extends AbstractGroupTest {
             Assert.fail("Expected ClientErrorException");
         } catch (ClientErrorException e) {
             // conflict status 409 - same name not allowed
-            assertEquals("HTTP 409 Conflict", e.getMessage());
+            assertSameNameNotAllowed(e.getResponse(),"Sibling group named 'top1' already exists.");
         }
 
         GroupRepresentation level2Group = new GroupRepresentation();
@@ -230,7 +248,7 @@ public class GroupTest extends AbstractGroupTest {
             Assert.fail("Expected ClientErrorException");
         } catch (ClientErrorException e) {
             // conflict status 409 - same name not allowed
-            assertEquals("HTTP 409 Conflict", e.getMessage());
+            assertSameNameNotAllowed(e.getResponse(),"Sibling group named 'level2-1' already exists.");
         }
     }
 
@@ -275,18 +293,19 @@ public class GroupTest extends AbstractGroupTest {
     @Test
     @UncaughtServerErrorExpected
     public void doNotAllowSameGroupNameAtTopLevelInDatabase() throws Exception {
-        final String id = KeycloakModelUtils.generateId();
-        testingClient.server().run(session -> {
+        final String id = testingClient.server().fetch(session -> {
             RealmModel realm = session.realms().getRealmByName("test");
-            realm.createGroup(id, "test-group");
-        });
+            GroupModel g = realm.createGroup("test-group");
+            return g.getId();
+        }, String.class);
         getCleanup().addGroupId(id);
         // unique key should work even in top groups
         expectedException.expect(RunOnServerException.class);
         expectedException.expectMessage(ModelDuplicateException.class.getName());
         testingClient.server().run(session -> {
             RealmModel realm = session.realms().getRealmByName("test");
-            realm.createGroup("test-group");
+            GroupModel g = realm.createGroup("test-group");
+            realm.removeGroup(g);
         });
     }
 
@@ -410,15 +429,15 @@ public class GroupTest extends AbstractGroupTest {
         topGroup = realm.getGroupByPath("/top");
         assertEquals(1, topGroup.getRealmRoles().size());
         assertTrue(topGroup.getRealmRoles().contains("topRole"));
-        assertEquals(1, topGroup.getSubGroups().size());
+        assertEquals(1, realm.groups().group(topGroup.getId()).getSubGroups(0, null, false).size());
 
-        level2Group = topGroup.getSubGroups().get(0);
+        level2Group = realm.getGroupByPath("/top/level2");
         assertEquals("level2", level2Group.getName());
         assertEquals(1, level2Group.getRealmRoles().size());
         assertTrue(level2Group.getRealmRoles().contains("level2Role"));
-        assertEquals(1, level2Group.getSubGroups().size());
+        assertEquals(1, realm.groups().group(level2Group.getId()).getSubGroups(0, null, false).size());
 
-        level3Group = level2Group.getSubGroups().get(0);
+        level3Group = realm.getGroupByPath("/top/level2/level3");
         assertEquals("level3", level3Group.getName());
         assertEquals(1, level3Group.getRealmRoles().size());
         assertTrue(level3Group.getRealmRoles().contains("level3Role"));
@@ -543,10 +562,11 @@ public class GroupTest extends AbstractGroupTest {
         response.close();
 
         // Assert "mygroup2" was moved
-        group1 = realm.groups().group(group1.getId()).toRepresentation();
-        group2 = realm.groups().group(group2.getId()).toRepresentation();
-        assertNames(group1.getSubGroups(), "mygroup2");
-        assertEquals("/mygroup1/mygroup2", group2.getPath());
+        List<GroupRepresentation> group1Children = realm.groups().group(group1.getId()).getSubGroups(0, 10, false);
+        List<GroupRepresentation> group2Children = realm.groups().group(group2.getId()).getSubGroups(0, 10, false);
+
+        assertNames(group1Children, "mygroup2");
+        assertEquals("/mygroup1/mygroup2", realm.groups().group(group2.getId()).toRepresentation().getPath());
 
         assertAdminEvents.clear();
 
@@ -567,10 +587,10 @@ public class GroupTest extends AbstractGroupTest {
         response.close();
 
         // Assert "mygroup2" was moved
-        group1 = realm.groups().group(group1.getId()).toRepresentation();
-        group2 = realm.groups().group(group2.getId()).toRepresentation();
-        assertTrue(group1.getSubGroups().isEmpty());
-        assertEquals("/mygroup2", group2.getPath());
+        group1Children = realm.groups().group(group1.getId()).getSubGroups(0, 10, false);
+        group2Children = realm.groups().group(group2.getId()).getSubGroups(0, 10, false);
+        assertEquals(0, group1Children.size());
+        assertEquals("/mygroup2", realm.groups().group(group2.getId()).toRepresentation().getPath());
     }
 
     @Test
@@ -1081,6 +1101,30 @@ public class GroupTest extends AbstractGroupTest {
     }
 
     @Test
+    public void getSubGroups() throws Exception {
+        RealmResource realm = adminClient.realms().realm("test");
+
+        GroupRepresentation parent = new GroupRepresentation();
+        parent.setName("parent");
+        parent = createGroup(realm, parent);
+
+        GroupRepresentation child = new GroupRepresentation();
+        child.setName("child");
+        Map<String, List<String>> attributes = new HashMap<String, List<String>>();
+        attributes.put("attribute1", Arrays.asList("value1", "value2"));
+        child.setAttributes(attributes);
+
+        addSubGroup(realm, parent, child);
+
+        // Check brief and full retrieval of subgroups of parent
+        boolean briefRepresentation = true;
+        assertNull(realm.groups().group(parent.getId()).getSubGroups(null, null, briefRepresentation).get(0).getAttributes());
+
+        briefRepresentation = false;
+        assertThat(realm.groups().group(parent.getId()).getSubGroups(null, null, briefRepresentation).get(0).getAttributes().get("attribute1"), containsInAnyOrder("value1", "value2"));
+    }
+
+    @Test
     public void searchAndCountGroups() throws Exception {
         String firstGroupId = "";
 
@@ -1107,8 +1151,20 @@ public class GroupTest extends AbstractGroupTest {
         List<GroupRepresentation> allGroups = realm.groups().groups();
         assertEquals(20, allGroups.size());
 
-        List<GroupRepresentation> slice = realm.groups().groups(5, 7);
+        List<GroupRepresentation> slice = realm.groups().groups(0, 7);
         assertEquals(7, slice.size());
+
+        slice = realm.groups().groups(null, 7);
+        assertEquals(7, slice.size());
+
+        slice = realm.groups().groups(10, null);
+        assertEquals(10, slice.size());
+
+        slice = realm.groups().groups(5, 7);
+        assertEquals(7, slice.size());
+
+        slice = realm.groups().groups(15, 7);
+        assertEquals(5, slice.size());
 
         List<GroupRepresentation> search = realm.groups().groups("group1",0,20);
         assertEquals(11, search.size());
@@ -1120,9 +1176,9 @@ public class GroupTest extends AbstractGroupTest {
         assertEquals(0, noResultSearch.size());
 
         // Count
-        assertEquals(new Long(allGroups.size()), realm.groups().count().get("count"));
-        assertEquals(new Long(search.size()), realm.groups().count("group1").get("count"));
-        assertEquals(new Long(noResultSearch.size()), realm.groups().count("abcd").get("count"));
+        assertEquals(Long.valueOf(allGroups.size()), realm.groups().count().get("count"));
+        assertEquals(Long.valueOf(search.size()), realm.groups().count("group1").get("count"));
+        assertEquals(Long.valueOf(noResultSearch.size()), realm.groups().count("abcd").get("count"));
 
         // Add a subgroup for onlyTopLevel flag testing
         GroupRepresentation level2Group = new GroupRepresentation();
@@ -1131,8 +1187,8 @@ public class GroupTest extends AbstractGroupTest {
         response.close();
         assertAdminEvents.assertEvent(testRealmId, OperationType.CREATE, AdminEventPaths.groupSubgroupsPath(firstGroupId), level2Group, ResourceType.GROUP);
 
-        assertEquals(new Long(allGroups.size()), realm.groups().count(true).get("count"));
-        assertEquals(new Long(allGroups.size() + 1), realm.groups().count(false).get("count"));
+        assertEquals(Long.valueOf(allGroups.size()), realm.groups().count(true).get("count"));
+        assertEquals(Long.valueOf(allGroups.size() + 1), realm.groups().count(false).get("count"));
         //add another subgroup
         GroupRepresentation level2Group2 = new GroupRepresentation();
         level2Group2.setName("group111111");
@@ -1144,7 +1200,19 @@ public class GroupTest extends AbstractGroupTest {
         assertNotNull(group0);
         assertEquals(2,group0.getSubGroups().size());
         assertThat(group0.getSubGroups().stream().map(GroupRepresentation::getName).collect(Collectors.toList()), Matchers.containsInAnyOrder("group1111", "group111111"));
-        assertEquals(new Long(search.size()), realm.groups().count("group11").get("count"));
+        assertEquals(countLeafGroups(search), realm.groups().count("group11").get("count"));
+    }
+
+    private Long countLeafGroups(List<GroupRepresentation> search) {
+        long counter = 0;
+        for(GroupRepresentation group : search) {
+            if(group.getSubGroups().isEmpty()) {
+                counter += 1;
+                continue;
+            }
+            counter += countLeafGroups(group.getSubGroups());
+        }
+        return counter;
     }
 
     @Test
@@ -1176,7 +1244,7 @@ public class GroupTest extends AbstractGroupTest {
         Comparator<GroupRepresentation> compareByName = Comparator.comparing(GroupRepresentation::getName);
 
         // Assert that all groups are returned in order
-        List<GroupRepresentation> allGroups = realm.groups().groups();
+        List<GroupRepresentation> allGroups = realm.groups().groups(0, 100);
         assertEquals(40, allGroups.size());
         assertTrue(Comparators.isInStrictOrder(allGroups, compareByName));
 
@@ -1200,10 +1268,39 @@ public class GroupTest extends AbstractGroupTest {
     }
 
     @Test
+    public void removeAllGroupAttributes() {
+        final var realm = adminClient.realms().realm("test");
+        final var groupName = "remove-all-attributes-group";
+
+        final Map<String, List<String>> initialAttributes = Map.of("test-key", List.of("test-val"));
+        final var groupToCreate =
+                GroupBuilder.create().name(groupName).attributes(initialAttributes).build();
+        final var groupsResource = realm.groups();
+        try (final Response response = groupsResource.add(groupToCreate)) {
+            final var groupId = ApiUtil.getCreatedId(response);
+
+            final var groupResource = groupsResource.group(groupId);
+            final var createdGroup = groupResource.toRepresentation();
+            assertThat(createdGroup.getAttributes(), equalTo(initialAttributes));
+
+            final var groupToUpdate =
+                    GroupBuilder.create().name(groupName).attributes(Collections.emptyMap()).build();
+            groupResource.update(groupToUpdate);
+
+            final var updatedGroup = groupResource.toRepresentation();
+            assertThat(updatedGroup.getAttributes(), anEmptyMap());
+        }
+    }
+
+    @Test
     public void testBriefRepresentationOnGroupMembers() {
         RealmResource realm = adminClient.realms().realm("test");
         String groupName = "brief-grouptest-group";
         String userName = "brief-grouptest-user";
+
+        // enable user profile unmanaged attributes
+        UserProfileResource upResource = realm.users().userProfile();
+        UPConfig cfg = VerifyProfileTest.enableUnmanagedAttributes(upResource);
 
         GroupsResource groups = realm.groups();
         try (Response response = groups.add(GroupBuilder.create().name(groupName).build())) {
@@ -1232,6 +1329,9 @@ public class GroupTest extends AbstractGroupTest {
 
             group.remove();
             user.remove();
+        } finally {
+            cfg.setUnmanagedAttributePolicy(null);
+            upResource.update(cfg);
         }
     }
 
@@ -1270,5 +1370,70 @@ public class GroupTest extends AbstractGroupTest {
         assertTrue(searchResultSubGroups.isEmpty());
         searchResultGroups.remove(0);
         assertTrue(searchResultGroups.isEmpty());
+    }
+
+    public void testParentAndChildGroup(String parentName, String childName) {
+        RealmResource realm = adminClient.realms().realm("test");
+        GroupRepresentation parentGroup = new GroupRepresentation();
+        parentGroup.setName(parentName);
+        parentGroup = createGroup(realm, parentGroup);
+        GroupRepresentation childGroup = new GroupRepresentation();
+        childGroup.setName(childName);
+        try (Response response = realm.groups().group(parentGroup.getId()).subGroup(childGroup)) {
+            assertEquals(201, response.getStatus()); // created status
+            childGroup.setId(ApiUtil.getCreatedId(response));
+        }
+        assertAdminEvents.assertEvent(testRealmId, OperationType.CREATE,
+                AdminEventPaths.groupSubgroupsPath(parentGroup.getId()), childGroup, ResourceType.GROUP);
+
+        List<GroupRepresentation> groupsFound = realm.groups().groups(parentGroup.getName(), true, 0, 1, true);
+        Assert.assertEquals(1, groupsFound.size());
+        Assert.assertEquals(parentGroup.getId(), groupsFound.iterator().next().getId());
+        Assert.assertEquals(0, groupsFound.iterator().next().getSubGroups().size());
+        parentGroup = groupsFound.iterator().next();
+        Assert.assertEquals(KeycloakModelUtils.buildGroupPath(GroupProvider.DEFAULT_ESCAPE_SLASHES, parentName),
+                parentGroup.getPath());
+
+        groupsFound = realm.groups().groups(childGroup.getName(), true, 0, 1, true);
+        Assert.assertEquals(1, groupsFound.size());
+        Assert.assertEquals(parentGroup.getId(), groupsFound.iterator().next().getId());
+        Assert.assertEquals(1, groupsFound.iterator().next().getSubGroups().size());
+        Assert.assertEquals(childGroup.getId(), groupsFound.iterator().next().getSubGroups().iterator().next().getId());
+        childGroup = groupsFound.iterator().next().getSubGroups().iterator().next();
+        Assert.assertEquals(KeycloakModelUtils.normalizeGroupPath(
+                KeycloakModelUtils.buildGroupPath(GroupProvider.DEFAULT_ESCAPE_SLASHES, parentName, childName)),
+                childGroup.getPath());
+
+        GroupRepresentation groupFound = realm.getGroupByPath(parentGroup.getPath());
+        Assert.assertNotNull(groupFound);
+        Assert.assertEquals(parentGroup.getId(), groupFound.getId());
+        groupFound = realm.getGroupByPath(childGroup.getPath());
+        Assert.assertNotNull(groupFound);
+        Assert.assertEquals(childGroup.getId(), groupFound.getId());
+
+        realm.groups().group(childGroup.getId()).remove();
+        assertAdminEvents.assertEvent(testRealmId, OperationType.DELETE, AdminEventPaths.groupPath(childGroup.getId()), ResourceType.GROUP);
+        realm.groups().group(parentGroup.getId()).remove();
+        assertAdminEvents.assertEvent(testRealmId, OperationType.DELETE, AdminEventPaths.groupPath(parentGroup.getId()), ResourceType.GROUP);
+    }
+
+    @Test
+    public void testGroupsWithSpaces() {
+         testParentAndChildGroup("parent space", "child space");
+    }
+
+    @Test
+    public void testGroupsWithSlashes() {
+         testParentAndChildGroup("parent/slash", "child/slash");
+    }
+
+    /**
+     * Assert that when you create/move/update a group name, the response is not Http 409 Conflict and the message does not
+     * correspond to the returned user-friendly message in such cases
+     */
+    private void assertSameNameNotAllowed(Response response, String expectedErrorMessage) {
+        assertEquals(409, response.getStatus());
+        ErrorRepresentation error = response.readEntity(ErrorRepresentation.class);
+        Assert.assertEquals(expectedErrorMessage, error.getErrorMessage());
     }
 }
